--- a/index.html
+++ b/index.html
@@ -589,10 +589,10 @@
             el: ".swiper-pagination",
             clickable: true,
           },
-          autoplay: {
-          delay: 1500,
-          disableOnInteraction: false,
-        },
+        //   autoplay: {
+        //   delay: 1500,
+        //   disableOnInteraction: false,
+        // },
           breakpoints: {
             140:{
                 slidesPerView: 1,
