--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         
 
             <div class="fea-box">
-                <img src="https://ineuron.ai/images/landing-page/statistics/student-iocn.svg" alt="">>
+                <img src="https://ineuron.ai/images/landing-page/statistics/student-iocn.svg" alt="">
                 <h3>400000+</h3>
                 <p>Students Enrolled</p>
             </div>
