--- a/index.html
+++ b/index.html
@@ -546,6 +546,10 @@
       <li>Hack-A-Thon</li>
       <li>Job Gurantee</li>
       <li>Privacy Policy</li>
+      <li>Contact us</li>
+      <li>FAQs</li>
+      <li>Job Assistance</li>
+      <li>Terms and conditions</li>
     </div>
 
     <div class="footer-col">
