--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <ul>
                   <i id="menu-close"  class="fa-solid fa-xmark"></i>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Couses</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="https://ineuron.ai/about-us">About</a></li>
+                    <li><a href="https://ineuron.ai/courses">Couses</a></li>
+                    <li><a href="https://blog.ineuron.ai">Blog</a></li>
+                    <li><a href="https://ineuron.ai/contact-us">Contact</a></li>
                 </ul>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1024px-Hamburger_icon.svg.png" alt="" class="menu-btn">
             </div>
@@ -46,8 +46,8 @@
         <h2>Highest in quality, affordable in price</h2>
         <p>Digital entrepreneurs, Youtubers and content creators provide affordable courses across technologies.</p>
         <div class="btn">
-            <a class="blue" href="#">Learn More</a>
-            <a class="yellow" href="#">Visit Courses</a>
+            <a class="blue" href="https://ineuron.ai/about-us">Learn More</a>
+            <a class="yellow" href="https://ineuron.ai/courses">Visit Courses</a>
         </div>
     </section>
 
